BUG#5318 - failure: 'IGNORE_SPACE' affects numeric values after DEFAULT. Added a check to recover from IGNORE_SPACE in this situation: <ident-character(s)><space><dot><ident-character(s)> The ignored space led to the false identification of the dot as an ident separator (like "db.table").

mysql-test/r/sql_mode.result:
  BUG#5318 - failure: 'IGNORE_SPACE' affects numeric values after DEFAULT.
  Added the test results.
mysql-test/t/sql_mode.test:
  BUG#5318 - failure: 'IGNORE_SPACE' affects numeric values after DEFAULT.
  Added new tests for the bug.
sql/sql_lex.cc:
  BUG#5318 - failure: 'IGNORE_SPACE' affects numeric values after DEFAULT.
  Added code to recover from skipped spaces in mode IGNORE_SPACES,
  when testing for an ident separator (which happens to be a dot).